--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.1.1",
+    "html-react-parser": "^1.4.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
